Fix footer alignment issues.

--- a/design/sass/_media.scss
+++ b/design/sass/_media.scss
@@ -12,7 +12,7 @@
 
    footer {
       .footer_item {
-         width: 45%;
+         width: 90%;
       }
    }
 }
